# CrajyMinder

./: LICENSE  package-lock.json  package.json  pyproject.toml
crajyminder/: __main__.py  app.py  utils.py
crajyminder/css/: stylesheet.css  stylesheet.scss
crajyminder/static/css/: stylesheet.css  stylesheet.scss
crajyminder/templates/: index.html
